fixed the disappearing <legend> on ie9
git-svn-id: https://aux1.edublogs.org/repos/incsub/trunk/plugins/appointments@7416 f53fe46e-8c02-459b-9fdd-93e75771b278

--- a/css/front.css
+++ b/css/front.css
@@ -75,7 +75,7 @@ opacity:0.6;
 }
 .appointments-legend-table{
 	font-size: 0.75em;
-	table-layout:fixed;
+	table-layout:auto;
 	overflow: hidden;
 	border: 0 !important;
 }
@@ -89,6 +89,7 @@ table.appointments-legend-table {
 	min-width: 30px;
 	border: none !important;
 	cursor:default;
+  width: auto;
 }
 .appointments-weekly-calendar-hours-mins{
 font-weight:bold;
@@ -471,7 +472,7 @@ tr td.free.selected { border-top:none; border:2px solid #fff; opacity: 0.5; }
 .appointments-wrapper h3,
 .appointments-confirmation-wrapper h3 { font-size: 0.8em; font-weight: 500; text-transform: uppercase; }
 .appointments-legend { margin:1em 0; }
-.appointments-legend-table { float: right; clear: both; }
+.appointments-legend-table { float: left; clear: both; }
 .appointments-pagination { clear:both; }
 
 /* form elements */
